# pixel_zero

./: Cargo.toml  GRAPHICS_API.md  readme.md
api/: C_API.md  Cargo.toml  example.c  pixel_zero.h
api/src/: ffi.rs  graphics.rs  input.rs  lib.rs
api/src/graphics/: color.rs  drm.rs  egl.rs  font.rs  framebuffer.rs  gbm.rs  mod.rs  shader.rs  sprite.rs  texture.rs
cpp/: CMakeLists.txt
cpp/asl/: CMakeLists.txt
cpp/asl/include/: types.hpp  vec.hpp
game/: Cargo.toml
game/src/: game.rs  main.rs
launcher/: Cargo.toml
launcher/src/: graphics.rs  launcher.rs  main.rs
launcher/src/graphics/: egl.rs  gbm.rs  mod.rs
launcher/src/platform/: egl.rs  egui.rs  gbm.rs  input.rs  mod.rs
launcher/src/screen/: game_menu.rs  main_menu.rs  mod.rs
pixel_zero/: Cargo.toml
pixel_zero/elf_macros/: Cargo.toml
pixel_zero/elf_macros/src/: lib.rs
pixel_zero/src/: ffi.rs  input.rs  io.rs  lib.rs  log.rs  meta.rs  terminal.rs  ui.rs
pixel_zero/src/graphics/: aseprite.rs  color.rs  drm.rs  egl.rs  font.rs  frame.rs  framebuffer.rs  gbm.rs  line.rs  mod.rs  quad.rs  shader.rs  sprite.rs  texture.rs
pixel_zero/src/graphics/shaders/: screen.frag  screen.vert  shape.vert  sprite.frag  sprite.vert
pixel_zero/src/input/: keys.rs  mod.rs
pixel_zero/src/ui/: mod.rs
rust/: rust-toolchain.toml
