[workspace]
members = ["pixel_zero", "pixel_zero/elf_macros", "launcher", "game"]
resolver = "3"

[workspace.lints.clippy]
pedantic = "allow"

[workspace.dependencies]
pixel_zero = { path = "pixel_zero" }
anyhow = "1.0"
bytemuck = "1.25"
glam = "0.30"
log = { version = "0.4", features = ["std"] }
thiserror = "2.0"
