[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
libc = "0.2"
drm = "0.14"
gbm = { version = "0.18", default-features = false, features = [
    "drm-support",
    "import-egl",
] }
khronos-egl = { version = "6.0", features = ["static"] }
gl = "0.14"
nix = { version = "0.31", features = ["term"] }
image = "0.25"
