[package]
name = "pixel_zero"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[dependencies]
elf_macros = { path = "elf_macros" }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
drm = "0.14"
gbm = { version = "0.18", default-features = false, features = [
    "drm-support",
    "import-egl",
] }
khronos-egl = { version = "6.0", features = ["static"] }
gl = "0.14"
nix = { version = "0.31", features = ["term"] }
image = { version = "0.25", default-features = false, features = ["png"] }
parking_lot = "0.12"
goblin = { version = "0.10", default-features = false, features = [
    "std",
    "elf64",
    "elf32",
    "endian_fd",
] }

[lints]
workspace = true
