[package]
name = "pixel_zero"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[dependencies]
elf_macros = { path = "elf_macros" }
log = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
drm = "0.14"
gbm = { version = "0.18", default-features = false, features = [
    "drm-support",
    "import-egl",
] }
glam = "0.30"
glow = "0.16"
goblin = { version = "0.10", default-features = false, features = [
    "std",
    "elf64",
    "elf32",
    "endian_fd",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
khronos-egl = { version = "6.0", features = ["static"] }
nix = { version = "0.31", features = ["term", "ioctl"] }
parking_lot = "0.12"
strum = { version = "0.27", features = ["derive"] }

[lints]
workspace = true
